Minor change to the admin page

--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@
         <div class="navlogo">
             <img src="images/CloEx.png" alt="company logo" width="60px">
         </div>
-        <ul>
+        <ul class="ul">
             <li style="cursor: pointer;">Home</li>
             <li style="cursor: pointer;">Categories</li>
             <li style="cursor: pointer;">Help</li>
